--- a/roles/grafana-dashboards/templates/nexus-dashboard.yaml.j2
+++ b/roles/grafana-dashboards/templates/nexus-dashboard.yaml.j2
@@ -4,10 +4,17 @@ metadata:
   name: nexus
   namespace: {{ dsc.grafana.namespace }}
 spec:
+  datasources:
+    - inputName: "DS_PROMETHEUS-DEV"
+      datasourceName: "Prometheus"
   resyncPeriod: 30s
   instanceSelector:
     matchLabels:
-      dashboards: "{{ dsc.grafana.namespace }}"
+{% if dsc.global.environment == 'production' %}
+      app: {{ dsc.grafana.namespace }}-prod
+{% else %}
+      app: {{ dsc.grafana.namespace }}-horsprod
+{% endif %}
   grafanaCom:
     id: 16459
     revision: 1
