--- a/roles/grafana-dashboards/templates/gitlab-runner-dashboard.yaml.j2
+++ b/roles/grafana-dashboards/templates/gitlab-runner-dashboard.yaml.j2
@@ -1,11 +1,11 @@
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
 metadata:
-  name: keycloak
+  name: gitlab-runner
   namespace: {{ dsc.grafana.namespace }}
 spec:
   datasources:
-    - inputName: "PROMETHEUS_DS"
+    - inputName: "DS_PROMETHEUS"
       datasourceName: "Prometheus"
   resyncPeriod: 30s
   instanceSelector:
@@ -16,5 +16,5 @@ spec:
       app: {{ dsc.grafana.namespace }}-horsprod
 {% endif %}
   grafanaCom:
-    id: 14390
+    id: 14016
     revision: 2
