--- a/roles/vault/templates/values/00-main.j2
+++ b/roles/vault/templates/values/00-main.j2
@@ -17,29 +17,32 @@ server:
   route:
     enabled: false
   ha:
-    enabled: false
-  standalone:
     enabled: true
+    replicas: 3
+    apiAddr: "https://{{ vault_domain }}"
+    raft:
+      enabled: true
 {% if dsc.global.metrics.enabled %}
-    config: |
-      ui = true
-
-      listener "tcp" {
-        tls_disable = 1
-        address = "[::]:8200"
-        cluster_address = "[::]:8201"
-        telemetry {
-          unauthenticated_metrics_access = "false"
+      config: |
+        ui = true
+        listener "tcp" {
+          tls_disable = 1
+          address = "[::]:8200"
+          cluster_address = "[::]:8201"
+          telemetry {
+            unauthenticated_metrics_access = "false"
+          }
         }
-      }
-      storage "file" {
-        path = "/vault/data"
-      }
-      telemetry {
-        prometheus_retention_time = "30s"
-        disable_hostname = true
-      }
+        storage "raft" {
+          path = "/vault/data"
+        }
+        telemetry {
+          prometheus_retention_time = "30s"
+          disable_hostname = true
+        }
 {% endif %}
+  standalone:
+    enabled: false
   auditStorage:
     enable: true
   dataStorage:
