--- a/roles/grafana-dashboards/templates/nexus-dashboard.yaml.j2
+++ b/roles/grafana-dashboards/templates/nexus-dashboard.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
 metadata:
-  name: nexus
+  name: {{ dsc_name }}-nexus
   namespace: {{ dsc.grafana.namespace }}
 spec:
   datasources:
@@ -10,11 +10,7 @@ spec:
   resyncPeriod: 30s
   instanceSelector:
     matchLabels:
-{% if dsc.global.environment == 'production' %}
-      app: {{ dsc.grafana.namespace }}-prod
-{% else %}
-      app: {{ dsc.grafana.namespace }}-horsprod
-{% endif %}
+      app: {{ grafana_label }}
   grafanaCom:
     id: 16459
     revision: 1
