--- a/roles/grafana/templates/ingress.yaml.j2
+++ b/roles/grafana/templates/ingress.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: grafana-ingress
+  name: {{ grafana_name }}
   namespace: {{ dsc.grafana.namespace }}
   annotations:
 {% for key, val in dsc.ingress.annotations.items() %}
@@ -29,13 +29,9 @@ spec:
       http:
         paths:
           - pathType: Prefix
-            path: /
+            path: /{{ grafana_name }}
             backend:
               service:
-{% if dsc.global.environment == 'production' %}
-                name: {{ dsc.grafana.namespace }}-prod-service
-{% else %}
-                name: {{ dsc.grafana.namespace }}-horsprod-service
-{% endif %}
+                name: {{ grafana_name }}-service
                 port:
                   number: 3000
