--- a/roles/grafana-dashboards/templates/gitlab-ci-pipelines-dashboard.yaml.j2
+++ b/roles/grafana-dashboards/templates/gitlab-ci-pipelines-dashboard.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
 metadata:
-  name: {{ dsc_name }}-gitlab-ci-pipeline
+  name: {{ dsc_name }}-gitlab-ci-pipelines
   namespace: {{ dsc.grafana.namespace }}
 spec:
   datasources:
