--- a/roles/grafana-dashboards/templates/argo-cd-dashboard.yaml.j2
+++ b/roles/grafana-dashboards/templates/argo-cd-dashboard.yaml.j2
@@ -11,6 +11,6 @@ spec:
   instanceSelector:
     matchLabels:
       app: {{ grafana_label }}
-  grafanaCom:
-    id: 14584
-    revision: 1
+  configMapRef:
+    name: {{ dsc_name}}-argo-cd-dashboard-definition
+    key: json
