feat: :art: Add Kyverno namespace to dsc + improve uninstall

--- a/roles/kyverno/templates/replace-kubed.yml.j2
+++ b/roles/kyverno/templates/replace-kubed.yml.j2
@@ -37,7 +37,7 @@ spec:
           - kyverno
           - openshift-*
           - infra-*
-          - dso-kyverno
+          - {{ dsc.kyverno.namespace }}
     generate:
 {% raw %}
       namespace: "{{request.object.metadata.name}}"
