feat: :sparkles: add velero pre hook db backups

--- a/roles/gitlab/templates/values/00-main.j2
+++ b/roles/gitlab/templates/values/00-main.j2
@@ -96,3 +96,8 @@ global:
 
 prometheus:
   install: false
+
+postgresql:
+  primary:
+    podAnnotations:
+      pre.hook.backup.velero.io/command: '["/bin/bash", "-c", "pg_dump -Fc  -U dso -d gitlabhq_production  > /bitnami/postgresql/data/app.dump"]'
