--- a/roles/console-dso/templates/project.j2
+++ b/roles/console-dso/templates/project.j2
@@ -36,4 +36,4 @@ spec:
     - p, proj:console-pi-native:admin, applications, *, console-pi-native/*, *
     - p, proj:console-pi-native:admin-RW, applications, *, console-pi-native/*, *
   sourceRepos:
-  - https://github.com/cloud-pi-native/console.git
+  - "{{ dsc.console.consoleRepoUrl }}"
