--- a/roles/gitlab/templates/values/00-main.j2
+++ b/roles/gitlab/templates/values/00-main.j2
@@ -54,7 +54,9 @@ global:
     enabled: false
   certificates:
     customCAs:
+{% if dsc.global.platform == "openshift" %}
       - configMap: openshift-service-ca.crt
+{% endif %}
 {% for item in dsc.additionalsCA %}
 {% if item.kind == 'ConfigMap' %}
       - configMap: {{ item.name }}
