--- a/roles/nexus/templates/nexus.yml.j2
+++ b/roles/nexus/templates/nexus.yml.j2
@@ -16,9 +16,28 @@ spec:
       labels:
         app: nexus
     spec:
+{% if cluster_k8s is defined and cluster_k8s == "true" %}
+      initContainers:  # mkdir: cannot create directory '../sonatype-work/nexus3/log': Permission denied
+        - name: volume-mount-hack
+{% if not cluster_offline %}
+          image: busybox
+{% endif %}
+{% if cluster_offline is defined and cluster_offline == "true" %}
+          image: "{{ private_image_repository }}/busybox"
+{% endif %}
+          command: ["sh", "-c", "chown -R 200:200 /nexus-data"]
+          volumeMounts:
+            - mountPath: /nexus-data
+              name: nexus-data-volume
+{% endif %}
       containers:
         - name: nexus
+{% if not cluster_offline %}
           image: sonatype/nexus3:{{ dsc.nexus.imageTag }}
+{% endif %}
+{% if cluster_offline is defined and cluster_offline == "true" %}                                                                       
+          image: "{{ private_image_repository }}/sonatype/nexus3:{{ dsc.nexus.imageTag }}"
+{% endif %}
           imagePullPolicy: "IfNotPresent"
           ports:
             - containerPort: 8081  # Exposes container port
