--- a/roles/cloudnativepg/templates/values/00-main.j2
+++ b/roles/cloudnativepg/templates/values/00-main.j2
@@ -6,3 +6,8 @@ config:
   data:
     INHERITED_ANNOTATIONS: "pre.hook.backup.velero.io/command, pre.hook.backup.velero.io/container, post.hook.backup.velero.io/command, post.hook.backup.velero.io/container, pre.hook.backup.velero.io/timeout, pre.hook.backup.velero.io/on-error, post.hook.backup.velero.io/timeout, post.hook.backup.velero.io/on-error"    
 {% endif %}
+
+{% if cluster_offline is defined and cluster_offline == "true" %}                                                                       
+image:
+  repository: "{{ private_image_repository }}/cloudnative-pg/cloudnative-pg"
+{% endif %}
