--- a/roles/keycloak/templates/values/00-main.j2
+++ b/roles/keycloak/templates/values/00-main.j2
@@ -1,5 +1,10 @@
 image:
+{% if not cluster_offline %}
   registry: docker.io
+{% endif %}
+{% if cluster_offline is defined and cluster_offline == "true" %}                                                                       
+  registry: "{{ private_image_repository }}"
+{% endif %}
   pullPolicy: "IfNotPresent"
 
 auth:
